# hello-version

./: .gitignore  Makefile.am  configure.ac
cfg/: Makefile.am
src/: Makefile.am  main.c
